# ViTQuant

./: .gitignore  EXPERIMENT_DESIGN.md  PROJECT_REPORT.md  README.md  USER_GUIDE.md  pyproject.toml
configs/: deit_tiny.yaml  deit_tiny_w4a8.yaml  deit_tiny_w4a8_advanced.yaml  sam3.yaml  sam3_concept.yaml  sam3_w4a8.yaml  sam3_w4a8_advanced.yaml  sam_vit_b.yaml  sam_vit_b_w4a8.yaml  sam_vit_b_w4a8_advanced.yaml  vit_base.yaml
docs/superpowers/plans/: 2026-07-03-vit-quantization.md
docs/superpowers/specs/: 2026-07-03-vit-quantization-design.md
scripts/: evaluate.py  infer_sam.py  qualitative.py  qualitative_sam.py  quantize.py  quantize_sam.py  run_all.py  run_classification.py  run_sam.py  run_sam3_concept.py
tests/: test_calibrate.py  test_convert.py  test_data.py  test_device.py  test_evaluate.py  test_export.py  test_fake_quant.py  test_integration.py  test_loader.py  test_metrics.py  test_modules.py  test_observers.py  test_ort_quant.py  test_qconfig.py
vitquant/data/: imagenette.py  sam3_concept_samples.py  sam_samples.py
vitquant/deploy/: benchmark.py  export_onnx.py  quantize_ort.py  sam_export_onnx.py
vitquant/eval/: evaluate.py  metrics.py  qualitative.py  report.py  sam3_concept_evaluate.py  sam_evaluate.py
vitquant/models/: loader.py  sam_loader.py
vitquant/quant/: adaround.py  calibrate.py  convert.py  fake_quant.py  groups.py  modules.py  observers.py  persist.py  qconfig.py  sam_calibrate.py  sam_convert.py  sam_modules.py  smoothquant.py
vitquant/utils/: config.py  device.py  ort_session.py  progress.py
