[project]
name = "vitquant"
version = "0.1.0"
description = "ViT INT8 quantization framework: simulated quant research kernel + ONNX Runtime delivery"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "timm",
    "onnx",
    "onnxruntime",
    "pyyaml",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vitquant*"]

[tool.pytest.ini_options]
markers = ["slow: long-running integration tests (deselect with '-m \"not slow\"')"]
