[project]
name = "vitquant"
version = "0.1.0"
description = "ViT INT8 quantization framework: simulated quant research kernel + ONNX Runtime delivery"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    # QuantAttention mirrors timm's internal Attention (resolve_self_attn_mask);
    # keep the range narrow and re-verify on bump.
    "timm>=1.0.27,<1.1",
    "onnx",
    "onnxruntime",
    "pyyaml",
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vitquant*"]
