[project]
name = "vitquant"
version = "0.1.0"
description = "ViT/SAM simulated-quantization research framework for accuracy analysis and NPU pre-research"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    # QuantAttention mirrors timm's internal Attention (resolve_self_attn_mask);
    # keep the range narrow and re-verify on bump.
    "timm>=1.0.27,<1.1",
    "pyyaml",
    "numpy",
    "matplotlib",
    # SAM support: QuantSamAttention mirrors SamVisionAttention internals
    # (relative position embeddings added pre-softmax); re-verify on bump.
    "transformers>=5.13,<5.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vitquant*"]
